--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
+body{
+  background-image:url(https://img.freepik.com/free-photo/pink-feathers-texture-as-background_36860-413.jpg?size=626&ext=jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover ; 
+  min-height: 110vh; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.top, ul{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.wishes{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+h1{
+  font-size: 60px;
+  font-family: 'El Messiri', sans-serif;
+  margin: 0;
+  text-align: center;
+ color: #c38482;
+ text-shadow: 1px 1px #a554a1 ;
+}
+p{
+  font-family: 'Pacifico', cursive;
+  text-align: center;
+  margin: 0;
+  font-size: 19px;
+  text-align: center;
+  color: #a554a1;
+}
+input{
+  padding: 7px;
+  width: 300px;
+  margin-top: 25px;
+  border: none;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);  
+  background: linear-gradient(to right, rgb(230, 225, 225), white); 
+  color: #a554a1;
+  font-family: 'El Messiri', sans-serif;
+  font-size: 18px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+  width: 40px;
+  margin-top: 25px;
+  border: none;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);  
+  color: #a554a1;
+  font-weight: bold;
+  font-size: 20px;
+}
+img{
+  margin-top: 20px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);  
+  
+}
+li{
+  font-family: 'Pacifico', cursive;
+  font-size: 22px;
+  color: #8f498b;
+
+}
+.crossed{
+  text-decoration: line-through 3px black;
+}
+.delBtn{
+  font-family: 'El Messiri', sans-serif;
+  padding: 7px;
+  width: 150px;
+  border: none;
+  border-radius: 30px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);  
+  color: whitesmoke;
+  background-color: #c38482;
+  font-size: 17px;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
